what exactly and actually happened 53rd session/14.txt
Now let me verify the syntax and then integrate the v40.35 functions into computeCombinedScore:
Action: $ node -c "/app/Lichess Bot-AlphaZero-Pure.user.js" 2>&1
Observation: /app/Lichess Bot-AlphaZero-Pure.user.js:26014
}
^

SyntaxError: Unexpected token '}'
    at wrapSafe (node:internal/modules/cjs/loader:1464:18)
    at checkSyntax (node:internal/main/check_syntax:78:3)

Node.js v20.19.5
Exit code: 1